--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat|Noto+Sans|Open+Sans|Poppins|Roboto|Sen&display=swap"rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>SR Ecom</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
